api: habilita cors para consumo do webapp

--- a/ApiNullPointer/src/main/resources/application.yml
+++ b/ApiNullPointer/src/main/resources/application.yml
@@ -12,7 +12,12 @@ spring:
     username: root
     password: root
   jpa:
+    show-sql: true
     database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
       ddl-auto: create
     open-in-view: false
+
+environment:
+  urls:
+    webapp: ${WEBAPP_BASE_URL}
