api: add init data sql

--- a/ApiNullPointer/src/main/resources/application.yml
+++ b/ApiNullPointer/src/main/resources/application.yml
@@ -14,9 +14,14 @@ spring:
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQLDialect
+    defer-datasource-initialization: true
     hibernate:
       ddl-auto: create
     open-in-view: false
+  sql:
+    init:
+      data-locations: classpath:data.sql
+      mode: always
 
 environment:
   urls:
