--- a/ApiNullPointer/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/ApiNullPointer/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,12 @@
-{"properties": [{
-  "name": "environment.urls.webapp",
-  "type": "java.lang.String",
-  "description": "A description for 'environment.urls.webapp'"
-}]}
+{"properties": [
+  {
+    "name": "environment.urls.webapp",
+    "type": "java.lang.String",
+    "description": "A description for 'environment.urls.webapp'"
+  },
+  {
+    "name": "environment.urls.webapp",
+    "type": "java.lang.String",
+    "description": "A description for 'environment.urls.webapp'"
+  }
+]}
