--- a/ApiNullPointer/src/main/resources/application.yml
+++ b/ApiNullPointer/src/main/resources/application.yml
@@ -7,10 +7,10 @@ spring:
   application:
     name: ApiNullPointer
   datasource:
-    url: jdbc:mysql://localhost:3306/nullpointer
+    url: jdbc:mysql://${DB_HOST}/nullpointer
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: root
+    username: ${DB_USER:root}
+    password: ${DB_PASS:root}
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQLDialect
