--- a/ApiNullPointer/src/main/resources/application.yml
+++ b/ApiNullPointer/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   application:
     name: ApiNullPointer
   datasource:
-    url: jdbc:mysql://${DB_HOST}/nullpointer
+    url: jdbc:mysql://${DB_HOST:localhost:3306}/nullpointer
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${DB_USER:root}
     password: ${DB_PASS:root}
