--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
     volumes:
       - ~/dev/mysql-data:/var/lib/mysql
     networks:
-      - database
+      - nullpointer
 
   adminer:
     image: adminer
@@ -22,10 +22,39 @@ services:
     depends_on:
       - mysql
     networks:
-      - database
+      - nullpointer
+  
+  api-nullpointer:
+    build: 
+      context: ./ApiNullPointer
+      args:
+        - WEBAPP_BASE_URL=http://localhost:9000
+    image: dalmofelipe/nullpointer-api:0.1.0
+    container_name: nullpointer-api
+    environment:
+      - WEBAPP_BASE_URL=http://localhost:9000
+      - DB_HOST=mysql
+    depends_on:
+      - mysql
+    ports:
+      - "8000:8000"
+    networks:
+      - nullpointer
+
+  webapp-nullpointer:
+    build: 
+      context: ./WebAppNullPointer
+      args:
+        - API_BASE_URL=http://localhost:8000/api
+    image: dalmofelipe/nullpointer-webapp:0.1.0
+    container_name: nullpointer-webapp
+    ports:
+      - "9000:80"
+    networks:
+      - nullpointer
 
 networks:
-  database:
+  nullpointer:
 
 volumes:
   mysql-data:
