--- a/src/web/package.json
+++ b/src/web/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview --port 5555"
   },
   "dependencies": {
+    "jodit": "^4.2.37",
+    "jodit-react": "^4.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
