--- a/src/web/package.json
+++ b/src/web/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview --port 5555"
   },
   "dependencies": {
+    "dompurify": "^3.1.7",
     "jodit": "^4.2.37",
     "jodit-react": "^4.1.2",
     "react": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^22.3.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
