--- a/src/api/src/main/resources/application.yml
+++ b/src/api/src/main/resources/application.yml
@@ -18,10 +18,19 @@ spring:
     hibernate:
       ddl-auto: create
     open-in-view: false
+  mvc:
+    static-path-pattern: /uploads/**
   sql:
     init:
       data-locations: classpath:data.sql
       mode: always
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+  web:
+    resources:
+      static-locations: classpath:/static/uploads/
 
 environment:
   urls:
